# chimera-agent-baseline

./: .dockerignore  .env.example  .gitignore  .syncignore  CLAUDE.md  Dockerfile  Dockerfile_Baseline  Dockerfile_template  Makefile  README.md  do_build.sh  do_save.sh  do_test_run.sh  inference.py  pyproject.toml  requirements.txt
configs/: config.yaml
configs/experiment/: qwen_local.yaml
configs/nodes/: high.sh  low.sh  medium.sh
docs/: architecture.md  chimera.md  index.md  models.md  user-manual.md
input/: inputs.json  prostate-biopsy-decision-clinical-data.json  prostate-modality-level-neural-representations.json  structured-prompt.json
model/: README.md
output/: prostate-biospy-decision-reasoning.json
resources/: config.yaml
resources/guidelines_db/dcc43e4f-04a1-42a9-a71f-514b40194db2/: index_metadata.pickle
scripts/: convert_task3_data.py  download_embedding_model.py  process_guidelines.py  sanity_check.py
scripts/slurm/: dev.sbatch  run.sbatch
skills/guideline-search/: SKILL.md
src/chimera_agent_baseline/: __init__.py  case_loader.py  features.py  mcp_server.py  rag.py  run.py  schemas.py  skills.py  utils.py
src/chimera_agent_baseline/agent/: __init__.py  form_fill.py  graph.py  prompts.py
src/chimera_agent_baseline/models/: __init__.py  openai_compat.py  vllm_offline.py
src/chimera_agent_baseline/output/: schema.py
src/chimera_agent_baseline/tools/: __init__.py  base.py  definitions.py  predictor.py
templates/prompts/: agent_prompt.j2
test/input/interf0/: inputs.json  prostate-biopsy-decision-clinical-data.json
test/input/interf1/: inputs.json  prostate-treatment-decision-clinical-data.json
test/input/interf2/: inputs.json  prostate-modality-level-neural-representations.json  prostate-time-to-recurrence-or-last-follow-up-clinical-data.json  structured-prompt.json
test/input/task1/: clinical-data.json  queries.json
test/input/task2/: clinical-data.json  queries.json
test/input/task3/: clinical-data.json  (+2 more)
tests/: test_agent_graph.py  test_case_loader.py  test_features.py  test_mcp_server.py  test_predictor.py  test_rag.py  test_run.py
