[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chimera_agent_baseline"
version = "0.1.0"
description = "The Baseline Agent for the CHIMERA-Agent challenge"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Sander Moonemans" }]
dependencies = [
    "langgraph",
    "langchain",
    "langchain-openai",
    "langchain-mcp-adapters",
    "mcp",
    "chromadb",
    "hydra-core>=1.3",
    "python-dotenv",
    "jinja2",
    "pymupdf",
    "sentence-transformers",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "debugpy",
    "ipython",
]

[tool.hatch.build]
packages = ["src/chimera_agent_baseline"]

[tool.hatch.build.targets.wheel]
packages = ["src/chimera_agent_baseline"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
