[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chimera_agent_baseline"
version = "0.1.0"
description = "The Baseline Agent for the CHIMERA-Agent challenge"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Sander Moonemans" }]
dependencies = [
    "langgraph>=1.1,<2",
    "langchain>=1.2,<2",
    "langchain-openai>=1.1,<2",
    "langchain-mcp-adapters>=0.2,<0.3",
    "mcp>=1.27,<2",
    "chromadb>=1.5,<2",
    "hydra-core>=1.3,<2",
    "python-dotenv>=1.2,<2",
    "jinja2>=3.1,<4",
    "pymupdf>=1.27,<2",
    "sentence-transformers>=5.4,<6",
    "pydantic>=2.10,<3",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "debugpy",
    "ipython",
]

[tool.hatch.build]
packages = ["src/chimera_agent_baseline"]

[tool.hatch.build.targets.wheel]
packages = ["src/chimera_agent_baseline"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
